# plasmoid-ipaddr

./: CMakeLists.txt  Messages.sh
package/: metadata.json
package/contents/ui/: main.qml
plugin/: CMakeLists.txt  ipaddrplugin.cpp  ipaddrplugin.h  qmldir
